# herdr-recent-navigator

./: Cargo.toml  README.md  herdr-plugin.toml  install.sh
.github/workflows/: release.yml
src/: app.rs  cli.rs  data.rs  format.rs  ipc.rs  main.rs  models.rs  mru.rs  test_helpers.rs  tracker.rs  ui.rs
